Fix spacing

--- a/client/main.css
+++ b/client/main.css
@@ -10,3 +10,11 @@ body {
 html {
   height: 100%;
 }
+textarea,
+span {
+  font-size: 15px !important;
+}
+
+span {
+  white-space: nowrap !important;
+}
